k3s/base/back-office/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-office
  namespace: default
  labels:
    app: back-office
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-office
  template:
  
    metadata:
      labels:
        app: back-office
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: back-office
          image: rg.fr-par.scw.cloud/registry-goodfood/back-office:latest
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
