k3s/base/back-office/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-office
  namespace: default
spec:
  selector:
    app: back-office
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
